# fission_fusion_controller

./: .gitignore  CMakeLists.txt  package.xml
apptainer/: benchmark.sh  benchmark_subtask.sh  benchmark_v2.sh  container_scrip.sh  convergence_experiments.sh  fission_fusion.def  submit_task.sh
config/: config.yaml
data/resul-cps_samesize/: bot0.csv  bot1.csv  bot10.csv  bot11.csv  bot12.csv  bot13.csv  bot14.csv  bot15.csv  bot16.csv  bot17.csv  bot18.csv  bot19.csv  bot2.csv  bot20.csv  bot21.csv  bot22.csv  bot23.csv  bot24.csv  bot25.csv  bot26.csv  bot3.csv  bot4.csv  bot5.csv  bot6.csv  bot7.csv  bot8.csv  bot9.csv
data/result_202509051432/: bot0.csv  bot1.csv  bot10.csv  bot11.csv  bot12.csv  bot13.csv  bot14.csv  bot15.csv  bot16.csv  bot17.csv  bot18.csv  bot19.csv  bot2.csv  bot20.csv  bot21.csv  bot22.csv  bot23.csv  bot24.csv  bot25.csv  bot26.csv  bot27.csv  bot28.csv  bot29.csv  bot3.csv  bot30.csv  bot31.csv  bot32.csv  bot33.csv  bot34.csv  bot35.csv  bot36.csv  bot37.csv  bot38.csv  bot39.csv  bot4.csv  bot40.csv  bot41.csv  bot5.csv  bot6.csv  bot7.csv  (+2 more)
data/result_min_communication/: bot0.csv  bot1.csv  bot10.csv  bot11.csv  bot12.csv  bot13.csv  bot14.csv  bot15.csv  bot16.csv  bot17.csv  bot18.csv  bot19.csv  bot2.csv  bot20.csv  bot21.csv  bot22.csv  bot23.csv  bot24.csv  bot25.csv  bot26.csv  bot27.csv  bot28.csv  bot29.csv  bot3.csv  bot30.csv  bot31.csv  bot32.csv  bot33.csv  bot34.csv  bot35.csv  bot36.csv  bot37.csv  bot38.csv  bot39.csv  bot4.csv  bot40.csv  bot41.csv  bot5.csv  bot6.csv  bot7.csv  (+2 more)
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
experiments/: convergence.argos  convergence_obstacles.argos  counting_experiments.argos  cps_map.argos
launch/: benchmark.sh  convergence.sh  convergence_obstacles.sh  counting_experiments.sh  cps_task.sh  run.launch.py  run.sh
launch/rviz/: default.rviz
script/: convergence_cluster.sh  parameter_sensitivity.sh  parameter_sensitivity_cluster.sh
src/: SFFM.cpp  convergence_experment.cpp  cps_task.cpp  extrema_propagation.cpp  ground_position.cpp  ground_sensor.cpp  main.cpp  system_init.h  visualization.cpp
